--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,19 @@
+*{
+  box-sizing: border-box;
+}
 .App-header {
   background-color: #282c34;
 }
+body{
+  background-color: #f5f5f5;
+}
 
+.container{
+  max-width: 1100px;
+  margin: 0 auto;
+  width: 100%;
+}
+img{
+  max-width: 100%;
+  height: auto;
+}
