--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -10,3 +10,10 @@
 .product-image img{
     max-height: 150px;
 }
+button.add-to-Cart{
+    background-color: #d4d3d3;
+    padding: 10px 30px;
+    border: none;
+    cursor: pointer; 
+    border-radius: 30px;
+}
