--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -5,15 +5,16 @@
 }
 .cart-wrapper{
     background-color: #fff;
-    flex:  0 0 270px;
-    max-width:  270px;
+    flex:  0 0 320px;
+    max-width:  320px;
     margin-left: 30px;
     border: 1px solid #ccc;
+    padding: 20px;
 }
 
 .products{
-    flex:  0 0 calc(100% - 300px);
-    max-width: calc(100% - 300px);
+    flex:  0 0 calc(100% - 350px);
+    max-width: calc(100% - 350px);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
