--- a/src/components/SelectedItem/SelectedItem.css
+++ b/src/components/SelectedItem/SelectedItem.css
@@ -4,3 +4,7 @@
     margin-bottom: 30px;
     border-bottom: 1px solid #ccc;
 }
+.fav-item-wrapper h2{
+    text-align: center;
+    color: #34614c;
+}
