--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -41,3 +41,31 @@
     color: #fff;
     font-weight: bold;
 }
+
+@media screen and (max-width: 900px) {
+    .products{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media screen and (max-width: 800px) {
+    .page-wrapper{
+        flex-direction: column-reverse;
+    }
+    .cart-wrapper, .products{
+        flex: 0 0 100%;
+        max-width: 100%;
+        margin-left: 0;
+        margin-bottom: 30px;
+    }
+    .products{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media screen and (max-width: 500px) {
+    .products{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .product-image{
+        height: auto;
+    }
+}
